# QA_Challenges_Question_3

./: README.md  pyproject.toml
core/: logger_config.py
tests/: test_market_data.py
